Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm
@@ -60,6 +60,7 @@
 #import <wtf/SoftLinking.h>
 #import <wtf/WTFSemaphore.h>
 #import <wtf/WeakPtr.h>
+#import <wtf/WorkQueue.h>
 #import <wtf/text/AtomString.h>
 #import <wtf/text/CString.h>
 #import <wtf/text/StringToIntegerConversion.h>
@@ -304,7 +305,7 @@ Ref<SourceBufferPrivateAVFObjC> SourceBufferPrivateAVFObjC::create(MediaSourcePr
 SourceBufferPrivateAVFObjC::SourceBufferPrivateAVFObjC(MediaSourcePrivateAVFObjC* parent, Ref<SourceBufferParser>&& parser)
     : m_parser(WTFMove(parser))
     , m_errorListener(adoptNS([[WebAVSampleBufferErrorListener alloc] initWithParent:makeWeakPtr(*this)]))
-    , m_isAppendingGroup(adoptOSObject(dispatch_group_create()))
+    , m_appendQueue(WorkQueue::create("SourceBufferPrivateAVFObjC data parser queue"))
     , m_mediaSource(parent)
     , m_mapID(nextMapID())
 #if !RELEASE_LOG_DISABLED
@@ -562,16 +563,6 @@ void SourceBufferPrivateAVFObjC::didProvideContentKeyRequestInitializationDataFo
     UNUSED_PARAM(hasSessionSemaphore);
 }
 
-static dispatch_queue_t globalDataParserQueue()
-{
-    static dispatch_queue_t globalQueue;
-    static dispatch_once_t onceToken;
-    dispatch_once(&onceToken, ^{
-        globalQueue = dispatch_queue_create("SourceBufferPrivateAVFObjC data parser queue", DISPATCH_QUEUE_CONCURRENT);
-    });
-    return globalQueue;
-}
-
 void SourceBufferPrivateAVFObjC::append(Ref<SharedBuffer>&& data)
 {
     ALWAYS_LOG(LOGIDENTIFIER, "data length = ", data->size());
@@ -646,9 +637,8 @@ void SourceBufferPrivateAVFObjC::append(Ref<SharedBuffer>&& data)
     });
 
     m_parsingSucceeded = true;
-    dispatch_group_enter(m_isAppendingGroup.get());
 
-    dispatch_async(globalDataParserQueue(), [data = WTFMove(data), weakThis = m_appendWeakFactory.createWeakPtr(*this), parser = m_parser, isAppendingGroup = m_isAppendingGroup, abortCalled = m_abortCalled]() mutable {
+    m_appendQueue->dispatch([data = WTFMove(data), weakThis = m_appendWeakFactory.createWeakPtr(*this), parser = m_parser, abortCalled = m_abortCalled]() mutable {
         parser->appendData(WTFMove(data), [weakThis = WTFMove(weakThis), abortCalled]() mutable {
             callOnMainThread([weakThis = WTFMove(weakThis), abortCalled] {
                 if (!weakThis || abortCalled != weakThis->m_abortCalled)
@@ -662,7 +652,6 @@ void SourceBufferPrivateAVFObjC::append(Ref<SharedBuffer>&& data)
                 weakThis->appendCompleted();
             });
         });
-        dispatch_group_leave(isAppendingGroup.get());
     });
 }
 
@@ -708,7 +697,8 @@ void SourceBufferPrivateAVFObjC::resetParserState()
 {
     ALWAYS_LOG(LOGIDENTIFIER);
 
-    dispatch_group_wait(m_isAppendingGroup.get(), DISPATCH_TIME_FOREVER);
+    // Wait until all tasks in the workqueue have run.
+    m_appendQueue->dispatchSync([] { });
     m_mediaSamples.clear();
     m_hasPendingAppendCompletedCallback = false;
     m_processingInitializationSegment = false;
